Grand-plan, comments and README

--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
 </head>
 
 <body>
-    <!-- content -->
+    <!-- contact section + socials -->
+    
+    <!-- header section -->
+
+    <!-- hero section -->
+
+    <!-- section ('Power your creativity...') -->
+
+    <!-- section ('We Create...') -->
+
+    <!-- statistics section -->
+
+    <!-- section ('Our Core Services')  -->
+
+    <!-- section ('Our Latest Project')  -->
+
+    <!-- section ('Don't Miss Our...') -->
+
+    <!-- logo section -->
+
+    <!-- section ('How We Work')  -->
+
+    <!-- section ('Recent Blog Post')  -->
+
+    <!-- section ('Contact with Us') -->
+
+    <!-- footer section -->
+    
+    <!-- copyright section -->
+
+
     <script src="./js/main.js" type="module"></script>
 </body>
 
