--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Portfolio</title>
+        <!-- favicon -->
+        <!-- css -->
+        <link rel="stylesheet" href="./css/Home.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <!-- favicon -->
-    <!-- css -->
-</head>
-
-<body>
-    <!-- content -->
-    <script src="./js/main.js" type="module"></script>
-</body>
-
+    <body>
+        <!-- content -->
+        <script src="./js/main.js" type="module"></script>
+    </body>
 </html>
