--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Portfolio</title>
+        <!-- favicon -->
+        <!-- css -->
+        <!-- css -->
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <!-- favicon -->
-    <!-- css -->
-</head>
+    <body>
+        <!-- header -->
+        <!-- hero -->
+        <!-- introduction -->
+        <!-- resume -->
+        <!-- achievements -->
+        <!-- services -->
+        <!-- latest projects -->
+        <!-- subscribe -->
+        <!-- clients -->
+        <!-- how we works -->
+        <!-- blog -->
+        <!-- contact us -->
+        <!-- footer -->
 
-<body>
-<!-- header -->
-<!-- hero -->
-<!-- introduction -->
-<!-- resume -->
-<!-- achievements -->
-<!-- services -->
-<!-- latest projects -->
-<!-- subscribe -->
-<!-- clients -->
-<!-- how we works -->
-<!-- blog -->
-<!-- contact us -->
-<!-- footer -->
-
-
-    <script src="./js/main.js" type="module"></script>
-</body>
-
+        <script src="./js/main.js" type="module"></script>
+    </body>
 </html>
