--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         <!-- achievements -->
         <section class="container bg-main">
             <div class="row">
-                <div class="col-12 col-md-6 col-log-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     achievements
                 </div>
-                <div class="col-12 col-md-6 col-log-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     achievements
                 </div>
-                <div class="col-12 col-md-6 col-log-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     achievements
                 </div>
-                <div class="col-12 col-md-6 col-log-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     achievements
                 </div>
             </div>
