--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link rel="stylesheet" href="./css/Home.css" />
     </head>
     <body>
-        <!-- header -->
-        <!-- hero -->
+        <!-- main container -->
+        <div class="main-container">
+            <!-- header -->
+            <!-- hero -->
+        </div>
         <!-- introduction -->
         <!-- resume -->
         <!-- achievements -->
