--- a/index.html
+++ b/index.html
@@ -217,21 +217,76 @@
 
             <!-- blog -->
             <section class="container bg-grey">
+
+                <div class="row blogheader col-12">
+                    
+                    <h1>Recent Blog post </h1>
+                </div>
+
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
+                    <div class="col-12 col-md-6 col-lg-4 blog">
+                        <img src="./img/post-img1.png" alt="blog-img1">
+                        <a class="icblog fa fa-calendar"></a>
+                        <div class="ictext">Nov 28, 2019</div>
+                        <a class="icblog fa fa-user"></a>
+                        <div class="ictext">Admin</div>
+                        <div class="row">
+                            <a class="icblog">10</a>
+                        <div class="ictext">Comments</div>
+                        </div>
+                        <h2>Man in Red Plaid Shirt Talking on Phone Terrace</h2>
+                        <p>The Tutorial covers examples of identification And Rew Garfield and verifies if a picture</p>
+                        <button class="btn btn-more" type="submit">
+                            Read more
+                        </button>
                     </div>
-                    <div class="col-12 hidden visible-md col-md-6 col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
+                    <div class="col-12 col-md-6 col-lg-4 blog">
+                        <img src="./img/post-img3.png" alt="blog-img3">
+                        <a class="icblog fa fa-calendar"></a>
+                        <div class="ictext">Nov 28, 2019</div>
+                        <a class="icblog fa fa-user"></a>
+                        <div class="ictext">Admin</div>
+                        <div class="row">
+                            <a class="icblog">10</a>
+                        <div class="ictext">Comments</div>
+                        </div>
+                        <h2>Man in Red Plaid Shirt Talking on Phone Terrace</h2>
+                        <p>The Tutorial covers examples of identification And Rew Garfield and verifies if a picture</p>
+                        <button class="btn btn-more" type="submit">
+                            Read more
+                        </button>
                     </div>
-                    <div class="col-12 hidden visible-lg col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
+                    <div class="col-12 col-md-6 col-lg-4 blog">
+                        <img src="./img/post-img2.png" alt="blog-img2">
+                        <a class="icblog fa fa-calendar"></a>
+                        <div class="ictext">Nov 28, 2019</div>
+                        <a class="icblog fa fa-user"></a>
+                        <div class="ictext">Admin</div>
+                        <div class="row">
+                            <a class="icblog">10</a>
+                        <div class="ictext">Comments</div>
+                        </div>
+                        <h2>Man in Red Plaid Shirt Talking on Phone Terrace</h2>
+                        <p>The Tutorial covers examples of identification And Rew Garfield and verifies if a picture</p>
+                        <button class="btn btn-more" type="submit">
+                            Read more
+                        </button>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 blog">
+                        <img src="./img/post-img3.png" alt="blog-img3">
+                        <a class="icblog fa fa-calendar"></a>
+                        <div class="ictext">Nov 28, 2019</div>
+                        <a class="icblog fa fa-user"></a>
+                        <div class="ictext">Admin</div>
+                        <div class="row">
+                            <a class="icblog">10</a>
+                        <div class="ictext">Comments</div>
+                        </div>
+                        <h2>Man in Red Plaid Shirt Talking on Phone Terrace</h2>
+                        <p>The Tutorial covers examples of identification And Rew Garfield and verifies if a picture</p>
+                        <button class="btn btn-more" type="submit">
+                            Read more
+                        </button>
                     </div>
                 </div>
             </section>
