--- a/index.html
+++ b/index.html
@@ -131,151 +131,167 @@
                     <div class="col-12 col-md-6 col-lg-3">achievements</div>
                 </div>
             </section>
-
-            <!-- services -->
-            <section class="container bg-grey">
+            <div class="col-12 col-md-6 col-lg-4 blog">
+                <h2>BLOG</h2> <img src="./img/post-img1.png" alt="blog-img1">
+                <p>paragraph</p> <a class="icblog fa fa-calendar"></a>
+                <div class="btn">button</div>
+                <div class="ictext">Nov 28, 2019</div>
+                <a class="icblog fa fa-user"></a>
+                <div class="ictext">Admin</div>
                 <div class="row">
-                    <div class="col-12">
-                        <h2>SERVICES</h2>
-                    </div>
+                    <a class="icblog">10</a>
+                    <div class="ictext">Comments</div>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                    <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
-                </div>
-            </section>
+                <h2>Man in Red Plaid Shirt Talking on Phone Terrace</h2>
+                <p>The Tutorial covers examples of identification And Rew Garfield and verifies if a picture</p>
+                <button class="btn btn-more" type="submit">
+                    Read more
+                </button>
 
-            <!-- latest projects -->
-            <section class="container">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">LATEST PROJECTS</div>
-                    <div class="col-12 hidden visible-md col-md-6 col-lg-4">
-                        LATEST PROJECTS
-                    </div>
-                    <div class="col-12 hidden visible-lg col-lg-4">
-                        LATEST PROJECTS
-                    </div>
-                </div>
-            </section>
-
-            <!-- subscribe -->
-            <section class="container">
-                <div class="row">
-                    <img src="" alt="mail" class="col-12 col-lg-4" />
-                    <div class="col-12 col-lg-8">
-                        <h2>SUBSCRIBE</h2>
-                        <form>form</form>
-                        <div class="btn">button</div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- clients -->
-            <section class="container">
-                <div class="row">
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-1" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-2" />
-                </div>
-            </section>
-
-            <!-- how we works -->
-            <section class="container">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img src="" alt="how we works image" />
-                        <h3>paragraph</h3>
-                        <div>elementas</div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img src="" alt="how we works image" />
-                        <h3>paragraph</h3>
-                        <div>elementas</div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img src="" alt="how we works image" />
-                        <h3>paragraph</h3>
-                        <div>elementas</div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img src="" alt="how we works image" />
-                        <h3>paragraph</h3>
-                        <div>elementas</div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- blog -->
-            <section class="container bg-grey">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
-                    </div>
-                    <div class="col-12 hidden visible-md col-md-6 col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
-                    </div>
-                    <div class="col-12 hidden visible-lg col-lg-4">
-                        <h2>BLOG</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- contact us -->
-            <section class="container bg-main">
-                <div class="row">
-                    <div class="col-12 col-lg-4">
-                        <img src="" alt="img" />
-                        <h2>CONTACT US</h2>
-                        <div>
-                            <img src="" alt="img" />
-                            <div>
-                                <h3>heading 3</h3>
-                                <p>paragraph</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="" alt="img" />
-                            <div>
-                                <h3>heading 3</h3>
-                                <p>paragraph</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="" alt="img" />
-                            <div>
-                                <h3>heading 3</h3>
-                                <p>paragraph</p>
-                            </div>
+                <!-- services -->
+                <section class="container bg-grey">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-8">
-                        <form>
-                            <input type="text" placeholder="Name" />
-                            <input type="text" placeholder="Email" />
-                            <input type="text" placeholder="Phone number" />
-                            <input type="text" placeholder="Subject" />
-                            <textarea placeholder="Your Message Here"></textarea>
-                        </form>
-                        <div class="btn">Submit now</div>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
+                        <div class="col-12 col-md-6 col-lg-4">SERVICES</div>
                     </div>
-                </div>
-            </section>
+                </section>
+
+                <!-- latest projects -->
+                <section class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">LATEST PROJECTS</div>
+                        <div class="col-12 hidden visible-md col-md-6 col-lg-4">
+                            LATEST PROJECTS
+                        </div>
+                        <div class="col-12 hidden visible-lg col-lg-4">
+                            LATEST PROJECTS
+                        </div>
+                    </div>
+                </section>
+
+                <!-- subscribe -->
+                <section class="container">
+                    <div class="row">
+                        <img src="" alt="mail" class="col-12 col-lg-4" />
+                        <div class="col-12 col-lg-8">
+                            <h2>SUBSCRIBE</h2>
+                            <form>form</form>
+                            <div class="btn">button</div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- clients -->
+                <section class="container">
+                    <div class="row">
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-1" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2" />
+                        <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-2" />
+                    </div>
+                </section>
+
+                <!-- how we works -->
+                <section class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <img src="" alt="how we works image" />
+                            <h3>paragraph</h3>
+                            <div>elementas</div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <img src="" alt="how we works image" />
+                            <h3>paragraph</h3>
+                            <div>elementas</div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <img src="" alt="how we works image" />
+                            <h3>paragraph</h3>
+                            <div>elementas</div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <img src="" alt="how we works image" />
+                            <h3>paragraph</h3>
+                            <div>elementas</div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- blog -->
+                <section class="container bg-grey">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <h2>BLOG</h2>
+                            <p>paragraph</p>
+                            <div class="btn">button</div>
+                        </div>
+                        <div class="col-12 hidden visible-md col-md-6 col-lg-4">
+                            <h2>BLOG</h2>
+                            <p>paragraph</p>
+                            <div class="btn">button</div>
+                        </div>
+                        <div class="col-12 hidden visible-lg col-lg-4">
+                            <h2>BLOG</h2>
+                            <p>paragraph</p>
+                            <div class="btn">button</div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- contact us -->
+                <section class="container bg-main">
+                    <div class="row">
+                        <div class="col-12 col-lg-4">
+                            <img src="" alt="img" />
+                            <h2>CONTACT US</h2>
+                            <div>
+                                <img src="" alt="img" />
+                                <div>
+                                    <h3>heading 3</h3>
+                                    <p>paragraph</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="" alt="img" />
+                                <div>
+                                    <h3>heading 3</h3>
+                                    <p>paragraph</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="" alt="img" />
+                                <div>
+                                    <h3>heading 3</h3>
+                                    <p>paragraph</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <form>
+                                <input type="text" placeholder="Name" />
+                                <input type="text" placeholder="Email" />
+                                <input type="text" placeholder="Phone number" />
+                                <input type="text" placeholder="Subject" />
+                                <textarea placeholder="Your Message Here"></textarea>
+                            </form>
+                            <div class="btn">Submit now</div>
+                        </div>
+                    </div>
+                </section>
         </main>
 
         <!-- footer -->
