--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <!-- header -->
         <div class="main container header-hero row">
             <header class="header row col-12">
-                <!-- <div class="hidden visible-md col-12 row header-top-row "> -->
                 <div class="row header-top-row hidden visible-md col-12">
                     <div class="contacts">
                         <a class="icon fa fa-envelope"></a>
@@ -123,12 +122,22 @@
             </section>
 
             <!-- achievements -->
-            <section class="container bg-main">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-3">achievements</div>
-                    <div class="col-12 col-md-6 col-lg-3">achievements</div>
-                    <div class="col-12 col-md-6 col-lg-3">achievements</div>
-                    <div class="col-12 col-md-6 col-lg-3">achievements</div>
+            <section class="achievements-container">
+                <div class="container">
+                    <div class="row achievements">
+                        <div class="col-12 col-md-6 col-lg-3 achievement-block">
+                            <div class="img-blob">
+                                <img src="./img/achievements-blob.png" alt="">
+                            </div>
+                            <div class="achievement-text">
+                                <div class="number-count">
+                                    6000
+                                </div>
+                                <h4> Complete projects</h4>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </section>
             <div class="col-12 col-md-6 col-lg-4 blog">
