--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,10 +23,30 @@
                         <a href="#" class="contact">(+123) 45689</a>
                     </div>
                     <div class="socials">
-                        <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-facebook"></a>
-                        <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-google-plus"></a>
-                        <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-twitter"></a>
-                        <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-linkedin"></a>
+                        <a
+                            href="#"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="fa fa-facebook"
+                        ></a>
+                        <a
+                            href="#"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="fa fa-google-plus"
+                        ></a>
+                        <a
+                            href="#"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="fa fa-twitter"
+                        ></a>
+                        <a
+                            href="#"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="fa fa-linkedin"
+                        ></a>
                     </div>
                 </div>
                 <div class="row header-bottom-row">
@@ -51,9 +70,7 @@
 
             <section class="hero-main-section row">
                 <div class="row col-12 col-md-7 col-lg-6 hero-left-section">
-                    <h1>
-                        AI & Machine learning products creators
-                    </h1>
+                    <h1>AI & Machine learning products creators</h1>
                     <p>
                         Innovative machine learning products and services<br />on
                         a trusted platform.
@@ -61,17 +78,17 @@
                     <button class="btn btn-more" type="submit">
                         Learn more
                     </button>
-                    <button class="btn btn-join" type="submit">
-                        Join now
-                    </button>
+                    <button class="btn btn-join" type="submit">Join now</button>
                 </div>
-                <div class="hidden visible-md row col-5 col-lg-6 hero-right-section">
+                <div
+                    class="hidden visible-md row col-5 col-lg-6 hero-right-section"
+                >
                     <div>
                         <div class="moving-robot hero-images">
                             <img src=" ./img/moving-robot.png" alt="robot" />
                         </div>
                     </div>
-                    <div class=" mechanics hero-images">
+                    <div class="mechanics hero-images">
                         <img src="./img/mechanics.png" alt="mechanics" />
                     </div>
                 </div>
@@ -80,12 +97,12 @@
         <main>
             <!-- introduction -->
             <section class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <div class="column">content</div>
-                        <div class="column">content</div>
-                        <div class="column">content</div>
-                        <div class="column">content</div>
+                <div class="row introduction">
+                    <div class="introductionColumn col-12 col-lg-6">
+                        <div class="column"></div>
+                        <div class="column"></div>
+                        <div class="column"></div>
+                        <div class="column"></div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <h2>introduction</h2>
@@ -118,7 +135,11 @@
                         <div class="btn">Learn more</div>
                         <div class="btn">button</div>
                     </div>
-                    <img src="./img/resume-logo.png" alt="resume-img" class="col-12 col-lg-6" />
+                    <img
+                        src="./img/resume-logo.png"
+                        alt="resume-img"
+                        class="col-12 col-lg-6"
+                    />
                 </div>
             </section>
 
@@ -177,15 +198,31 @@
             <!-- clients -->
             <section class="container">
                 <div class="row">
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1" />
+                    <img
+                        src=""
+                        alt="clients-logo"
+                        class="col-4 col-lg-2 m-l-lg-1"
+                    />
                     <img src="" alt="clients-logo" class="col-4 col-lg-2" />
                     <img src="" alt="clients-logo" class="col-4 col-lg-2" />
                     <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-1" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-2" />
+                    <img
+                        src=""
+                        alt="clients-logo"
+                        class="col-4 col-lg-2 m-r-lg-1"
+                    />
+                    <img
+                        src=""
+                        alt="clients-logo"
+                        class="col-4 col-lg-2 m-l-lg-2"
+                    />
                     <img src="" alt="clients-logo" class="col-4 col-lg-2" />
                     <img src="" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-2" />
+                    <img
+                        src=""
+                        alt="clients-logo"
+                        class="col-4 col-lg-2 m-r-lg-2"
+                    />
                 </div>
             </section>
 
@@ -270,7 +307,9 @@
                             <input type="text" placeholder="Email" />
                             <input type="text" placeholder="Phone number" />
                             <input type="text" placeholder="Subject" />
-                            <textarea placeholder="Your Message Here"></textarea>
+                            <textarea
+                                placeholder="Your Message Here"
+                            ></textarea>
                         </form>
                         <div class="btn">Submit now</div>
                     </div>
@@ -296,5 +335,4 @@
 
         <script src="./js/main.js" type="module"></script>
     </body>
-
 </html>
