Introduction section 2nd column #12

--- a/index.html
+++ b/index.html
@@ -97,17 +97,35 @@
         <main>
             <!-- introduction -->
             <section class="container">
-                <div class="row introduction">
+                <div id="introduction_content" class="row introduction">
                     <div class="introductionColumn col-12 col-lg-6">
-                        <div class="column"></div>
-                        <div class="column"></div>
-                        <div class="column"></div>
-                        <div class="column"></div>
+                        <div class="col-lg-3 introductionColumn1">
+                            <div class="column"></div>
+                            <div class="column"></div>
+                        </div>
+                        <div class="col-lg-3 .m-l-1 introductionColumn2">
+                            <div class="column"></div>
+                            <div class="column"></div>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <h2>introduction</h2>
-                        <p>paragraph</p>
-                        <div class="btn">button</div>
+                        <h2 class="introduction-h2">
+                            Power Your Creativity With Artificial Intelligence
+                        </h2>
+                        <p class="introduction-p">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Duis at dictum risus, non suscipit arcu.
+                            Quisque aliquam posuere tortor, sit amet convallis
+                            nunc scelerisque in.
+                        </p>
+                        <p class="introduction-p">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Labore eius molesti ae facere, natus
+                            reprehenderit eaque eum, autem ipsam. Magni, error.
+                            Tem pora odit laborum iure inventore possimus
+                            laboriosam qui nam. Fugit!
+                        </p>
+                        <div class="introduction-btn">button</div>
                     </div>
                 </div>
             </section>
