HTML introduction section column structure update #11

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 <div id="introduction_content" class="row introduction">
                     <div class="introductionColumn col-12 col-lg-6">
                         <div class="col-lg-3 introductionColumn1">
-                            <div class="column"></div>
-                            <div class="column"></div>
+                            <div class="column col-lg-3"></div>
+                            <div class="column col-lg-3"></div>
                         </div>
-                        <div class="col-lg-3 .m-l-1 introductionColumn2">
-                            <div class="column"></div>
-                            <div class="column"></div>
+                        <div class="col-lg-3 introductionColumn2">
+                            <div class="column col-lg-3"></div>
+                            <div class="column col-lg-3"></div>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
