--- a/index.html
+++ b/index.html
@@ -99,14 +99,10 @@
             <section class="container">
                 <div id="introduction_content" class="row introduction">
                     <div class="introductionColumn col-12 col-lg-6">
-                        <div class="col-lg-3 introductionColumn1">
-                            <div class="column col-lg-3"></div>
-                            <div class="column col-lg-3"></div>
-                        </div>
-                        <div class="col-lg-3 introductionColumn2">
-                            <div class="column col-lg-3"></div>
-                            <div class="column col-lg-3"></div>
-                        </div>
+                        <div class="column"></div>
+                        <div class="column"></div>
+                        <div class="column"></div>
+                        <div class="column"></div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <h2 class="introduction-h2">
