Introduction JS and html structure fix

--- a/index.html
+++ b/index.html
@@ -96,13 +96,8 @@
         <main>
             <!-- introduction -->
             <section class="container">
-                <div id="introduction_content" class="row introduction">
-                    <div class="introductionColumn col-12 col-lg-6">
-                        <div class="column"></div>
-                        <div class="column"></div>
-                        <div class="column"></div>
-                        <div class="column"></div>
-                    </div>
+                <div id="introduction_content" class="row">
+                    <div class="introduction col-12 col-lg-6"></div>
                     <div class="col-12 col-lg-6">
                         <h2 class="introduction-h2">
                             Power Your Creativity With Artificial Intelligence
