--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <section class="container">
                 <div id="introduction_content" class="row">
                     <div class="introduction col-12 col-lg-6"></div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 introductionColumn2">
                         <h2 class="introduction-h2">
                             Power Your Creativity With Artificial Intelligence
                         </h2>
@@ -94,7 +94,7 @@
                             Tem pora odit laborum iure inventore possimus
                             laboriosam qui nam. Fugit!
                         </p>
-                        <div class="introduction-btn">button</div>
+                        <div class="btn">button</div>
                     </div>
                 </div>
             </section>
