--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
             <!-- subscribe -->
             <section class="container">
                 <div class="row">
-                    <img src="" alt="mail" class="col-12 col-lg-4" />
-                    <div class="col-12 col-lg-8">
-                        <h2>SUBSCRIBE</h2>
-                        <form>form</form>
-                        <div class="btn">button</div>
-                    </div>
+                    <img src="./img/mail.png" alt="mail" class="col-12 col-lg-4 mail-img" />
+                    <form class="col-12 col-lg-8 flex-box">
+                        <h2 class="h2-form">don't miss our news <br>and updates!</h2>
+                        <input type="email" placeholder="Enter Your Email" class="input-subscribe">
+                        <button type="button" class="subscribe-btn fa fa-location-arrow"></button>
+                    </form>    
                 </div>
             </section>
 
