--- a/index.html
+++ b/index.html
@@ -219,12 +219,14 @@
             <!-- subscribe -->
             <section class="container">
                 <div class="row">
-                    <img src="./img/mail.png" alt="mail" class="col-12 col-lg-4 mail-img" />
-                    <form class="col-12 col-lg-8 flex-box">
+                    <img src="./img/mail.png" alt="mail" class="col-12 col-lg-5 col-xl-4 mail-img" >
+                    <form class="col-12 col-lg-7 col-xl-8 flex-box">
                         <h2 class="h2-form">don't miss our news <br>and updates!</h2>
-                        <input type="email" placeholder="Enter Your Email" class="input-subscribe">
-                        <button type="button" class="subscribe-btn fa fa-location-arrow"></button>
-                    </form>    
+                        <div class="position">
+                            <input type="email" placeholder="Enter Your Email" class="input-subscribe">
+                            <button class="subscribe-btn fa fa-location-arrow"  type="submit"></button>
+                        </div>
+                    </form>       
                 </div>
             </section>
 
