--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
             <!-- subscribe -->
             <section class="container">
                 <div class="row">
-                    <img src="./img/mail.png" alt="mail" class="col-12 col-lg-5 col-xl-4 mail-img" >
+                    <div class="col-12 col-lg-5 col-xl-4 center">
+                        <img src="./img/mail.png" alt="mail" class="mail-img" >
+                    </div>
                     <form class="col-12 col-lg-7 col-xl-8 flex-box">
                         <h2 class="h2-form">don't miss our news <br>and updates!</h2>
                         <div class="position">
@@ -231,18 +233,27 @@
             </section>
 
             <!-- clients -->
-            <section class="container">
-                <div class="row">
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-1" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2" />
-                    <img src="#" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-2" />
-                </div>
+            <section class="container clients-background">
+                    <div class="row height">
+                        <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1 clients-logo" />
+                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="hidden visible-lg col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="hidden visible-lg col-lg-2 m-r-lg-1 clients-logo" />
+
+                    </div>
+                    <div class="row height">
+                        <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4              col-lg-2 m-l-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="col-4 hidden-lg                     clients-logo" />
+                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="hidden visible-lg  col-lg-2          clients-logo" />
+                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="hidden visible-lg col-lg-2          clients-logo" />
+                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4        col-lg-2 m-r-lg-2 clients-logo" />
+                    </div>
+                    <div class="row height">
+                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 hidden-lg" />
+                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 hidden-lg" />
+                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4 hidden-lg" />
+                    </div>
             </section>
 
             <!-- how we works -->
