#39 row and clients logo margin change

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
             <!-- clients -->
             <section class="container clients-background">
-                    <div class="row height">
+                    <div class="row margin">
                         <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1 clients-logo" />
                         <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
                         <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
@@ -242,7 +242,7 @@
                         <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="hidden visible-lg col-lg-2 m-r-lg-1 clients-logo" />
 
                     </div>
-                    <div class="row height">
+                    <div class="row">
                         <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4              col-lg-2 m-l-lg-2 clients-logo" />
                         <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="col-4 hidden-lg                     clients-logo" />
                         <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="hidden visible-lg  col-lg-2          clients-logo" />
