--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             Tem pora odit laborum iure inventore possimus
                             laboriosam qui nam. Fugit!
                         </p>
-                        <div class="btn">button</div>
+                        <div class="btn">Learn more</div>
                     </div>
                 </div>
             </section>
