--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
 
             <!-- subscribe -->
-            <section class="container">
-                <div class="row">
+            <section class="container position">
+                <div class="row mail">
                     <div class="col-12 col-lg-5 col-xl-4 center">
                         <img src="./img/mail.png" alt="mail" class="mail-img" >
                     </div>
@@ -230,31 +230,24 @@
                         </div>
                     </form>       
                 </div>
-            </section>
-
-            <!-- clients -->
-            <section class="container clients-background">
-                    <div class="row margin">
+                <!-- clients -->
+                <div class="container clients-background">
+                    <div class="row clients-row">
                         <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-1 clients-logo" />
                         <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
                         <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
-                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="hidden visible-lg col-lg-2 clients-logo" />
-                        <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="hidden visible-lg col-lg-2 m-r-lg-1 clients-logo" />
-
+                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-1 clients-logo" />
+                        <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4 col-lg-2 m-l-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 col-lg-2 clients-logo" />
+                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4 col-lg-2 m-r-lg-2 clients-logo" />
                     </div>
-                    <div class="row">
-                        <img src="./img/clients-logo/Progeny.png" alt="clients-logo" class="col-4              col-lg-2 m-l-lg-2 clients-logo" />
-                        <img src="./img/clients-logo/pedestal.png" alt="clients-logo" class="col-4 hidden-lg                     clients-logo" />
-                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="hidden visible-lg  col-lg-2          clients-logo" />
-                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="hidden visible-lg col-lg-2          clients-logo" />
-                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4        col-lg-2 m-r-lg-2 clients-logo" />
-                    </div>
-                    <div class="row height">
-                        <img src="./img/clients-logo/Porello.png" alt="clients-logo" class="col-4 hidden-lg" />
-                        <img src="./img/clients-logo/Pro-West.png" alt="clients-logo" class="col-4 hidden-lg" />
-                        <img src="./img/clients-logo/Binary Stream.png" alt="clients-logo" class="col-4 hidden-lg" />
-                    </div>
+                </div>
+                     
             </section>
+
+            
 
             <!-- how we works -->
             <section class="container">
