Achievement data validation

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <!-- achievements -->
         <section class="container achievements-container">
-            <div id="achivements_content" class="row achievements"></div>
+            <div id="achievements_content" class="row achievements"></div>
         </section>
 
         <!-- services -->
