introduction section, new HTML content

--- a/index.html
+++ b/index.html
@@ -75,9 +75,43 @@
         </div>
         <main>
             <!-- introduction -->
+            
             <section class="container">
-                <div id="introduction_content" class="row">
-                    <div class="introduction col-12 col-lg-6"></div>
+                <div class="row introduction">
+                    <div class="introductioncolumn col-12 col-lg-6">
+                        <div class="left">
+                            <div class="column">
+                                <div class="about-icon">
+                                    <i class="flaticon-artificial-intelligence-1"></i>
+                                </div>
+                                <h5>Advanced Programing</h5>
+                                <p>Find out what's working and what's not Dig your data to find</p>
+                            </div>
+                            <div class="column">
+                                <div class="about-icon">
+                                    <i class="flaticon-chip"></i>
+                                </div>
+                                <h5>AI Chippest</h5>
+                                <p>Find out what's working and what's not Dig your data to find</p>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="column">
+                                <div class="about-icon">
+                                    <i class="flaticon-artificial-intelligence"></i>
+                                </div>
+                                <h5>Cloud AI intergration</h5>
+                                <p>Find out what's working and what's not Dig your data to find</p>
+                            </div>
+                            <div class="column">
+                                <div class="about-icon">
+                                    <i class="flaticon-robotic-arm"></i>
+                                </div>
+                                <h5>Robotic Arm</h5>
+                                <p>Find out what's working and what's not Dig your data to find</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-12 col-lg-6 introductionColumn2">
                         <h2 class="introduction-h2">
                             Power Your Creativity With Artificial Intelligence
