--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- favicon -->
         <!-- css -->
         <link rel="stylesheet" href="./css/Home.css" />
-        <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
+        <link rel="stylesheet" href="./fonts/flaticon.css">
     </head>
 
     <body>
