#39 section layout fixes

--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
             <!-- subscribe -->
             <section class="container position">
                 <div class="row mail">
-                    <div class="col-12 col-lg-5 col-xl-4 center">
+                    <div class="col-12 col-lg-3 m-l-lg-1 center">
                         <img src="./img/mail.png" alt="mail" class="mail-img" >
                     </div>
-                    <form class="col-12 col-lg-7 col-xl-8 flex-box">
-                        <h2 class="h2-form">don't miss our news <br>and updates!</h2>
+                    <form class="col-12 col-lg-7 m-r-lg-1 form-flex">
+                        <h2 class="h2-form">don't miss our news and updates!</h2>
                         <div class="position">
                             <input type="email" placeholder="Enter Your Email" class="input-subscribe">
                             <button class="subscribe-btn fa fa-location-arrow"  type="submit"></button>
