--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
                 <a class="icon fa fa-phone"></a>
                 <a href="callto:(+123) 45689" class="contact">(+123) 45689</a>
             </div>
-            <div class="socials col-6">
-                <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-facebook"></a>
-                <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-google-plus"></a>
-                <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-twitter"></a>
-                <a href="#" target="_blank" rel="noreferrer noopener" class="fa fa-linkedin"></a>
-            </div>
+            <div id="socials_content" class="socials col-6"></div>
         </div>
         <div class="row header-bottom-row">
             <div class="logo col-3">
