--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <form class="col-12 col-lg-7 m-r-lg-1 form-flex">
                     <h2 class="h2-form">don't miss our news and updates!</h2>
                     <div class="position">
-                        <input type="email" placeholder="Enter Your Email" class="input-subscribe">
+                        <input type="email" placeholder="Enter Your Email" class="input-subscribe" required>
                         <button class="subscribe-btn fa fa-location-arrow"  type="submit"></button>
                     </div>
                 </form>       
