resume section layout

--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
                             laboriosam qui nam. Fugit!
                         </p>
                         <div class="btn">Learn more</div>
-                        <div class="btn">button</div>
+                        <div class="play-btn">
+                            <a href="https://www.youtube.com/watch?v=2PFVhej26BE">P</a>
+                        </div>
                     </div>
-                    <img
-                        src="./img/resume-logo.png"
-                        alt="resume-img"
-                        class="col-12 col-lg-6"
-                    />
+                    <img src="./img/resume-logo.png" alt="resume-img" class="col-12 col-lg-6"/>
                 </div>
             </section>
 
