--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
         <!-- favicon -->
         <!-- css -->
         <link rel="stylesheet" href="./css/Home.css" />
+        <link
+            rel="stylesheet"
+            href="https://www.flaticon.com/authors/smashicons"
+            title="Smashicons"
+        />
+        Smashicons />
     </head>
+
     <body>
         <!-- header -->
         <header class="container bg-main">
@@ -90,101 +97,104 @@
             <!-- services -->
             <section class="container bg-grey">
                 <div class="row">
-                    <div class="col-12">
-                        <h2 style="text-align: center">Our Core Services</h2>
+                    <div class="row col-12 core-title">
+                        <h2>Our Core Services</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo1.png" alt="Logo" />
-                        <h3>Virtual Personal Assistants</h3>
-                        <p>
-                            Capitalize on low hanging friut to identify a ball
-                            park value added activity to beta test.Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo1.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Virtual Personal Assistants</h3>
+                            <p>
+                                Capitalize on low hanging friut to identify a
+                                ball park value added activity to beta
+                                test.Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo2.png" alt="Logo" />
-                        <h3>Video Surveillance</h3>
-                        <p>
-                            Capitalize on low hanging fruit to identify a ball
-                            park value added activity to beta test. Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo2.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Video Surveillance</h3>
+                            <p>
+                                Capitalize on low hanging fruit to identify a
+                                ball park value added activity to beta test.
+                                Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo3.png" alt="Logo" />
-                        <h3>Social Media Services</h3>
-                        <p>
-                            Capitalize on low hanging fruit to identify a ball
-                            park value added activity to beta test. Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo3.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Social Media Services</h3>
+                            <p>
+                                Capitalize on low hanging fruit to identify a
+                                ball park value added activity to beta test.
+                                Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo4.png" alt="Logo" />
-                        <h3>Online Customer Support</h3>
-                        <p>
-                            Capitalize on low hanging fruit to identify a ball
-                            park value added activity to beta test. Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo4.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Online Customer Support</h3>
+                            <p>
+                                Capitalize on low hanging fruit to identify a
+                                ball park value added activity to beta test.
+                                Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo5.png" alt="Logo" />
-                        <h3>Search Engine Result Refining</h3>
-                        <p>
-                            Capitalize on low hanging fruit to identify a ball
-                            park value added activity to beta test. Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo5.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Search Engine Result Refining</h3>
+                            <p>
+                                Capitalize on low hanging fruit to identify a
+                                ball park value added activity to beta test.
+                                Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="./img/service.logo6.png" alt="Logo" />
-                        <h3>Online Fraud Detection</h3>
-                        <p>
-                            Capitalize on low hanging fruit to identify a ball
-                            park value added activity to beta test. Override the
-                            digital divide with additional
-                        </p>
+                    <div class="col-12 col-md-6 col-lg-4 service-block">
+                        <div class="service-img">
+                            <img src="./img/service-logo6.png" alt="Logo" />
+                        </div>
+                        <div class="service-text">
+                            <h3>Online Fraud Detection</h3>
+                            <p>
+                                Capitalize on low hanging fruit to identify a
+                                ball park value added activity to beta test.
+                                Override the digital divide with additional
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <!-- latest projects -->
             <section class="container">
-                <div class="row col-12 services-title">
-                    <h2>Our latest projects</h2>
-                </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="image-container">
-                            <img src="./img/1pr.jpg" alt="Vocal Avatar API" class="project-image">
-                            <div class="overlay">
-                                <div class="text">Vocal avatar API</div>
-                            </div>
-                        </div>
+                    <div class="col-12 col-md-6 col-lg-4">LATEST PROJECTS</div>
+                    <div class="col-12 hidden visible-md col-md-6 col-lg-4">
+                        LATEST PROJECTS
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="image-container">
-                            <img src="./img/2pr.jpg" alt="Vocal Avatar API" class="project-image">
-                            <div class="overlay">
-                                <div class="text">Vocal avatar API</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="image-container">
-                            <img src="./img/3pr.jpg" alt="Vocal Avatar API" class="project-image">
-                            <div class="overlay">
-                                <div class="text">Vocal avatar API</div>
-                            </div>
-                        </div>
+                    <div class="col-12 hidden visible-lg col-lg-4">
+                        LATEST PROJECTS
                     </div>
                 </div>
             </section>
-
 
             <!-- subscribe -->
             <section class="container">
