--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- favicon -->
     <!-- css -->
     <link rel="stylesheet" href="./css/Home.css" />
+    <link rel="stylesheet" href="./font/flaticon.css">
 </head>
 
 <body>
@@ -82,18 +83,59 @@
     <main>
         <!-- introduction -->
         <section class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <div class="column">content</div>
-                    <div class="column">content</div>
-                    <div class="column">content</div>
-                    <div class="column">content</div>
+            <div class="row introduction">
+                <div class="introductioncolumn col-12 col-lg-7">
+                    <div class="left">
+                        <div class="column">
+                            <div class="about-icon">
+                                <i class="flaticon-artificial-intelligence-1"></i>
+                            </div>
+                            <h5>Advanced Programing</h5>
+                            <p>Find out what's working and what's not Dig your data to find</p>
+                        </div>
+                        <div class="column">
+                            <div class="about-icon">
+                                <i class="flaticon-chip"></i>
+                            </div>
+                            <h5>AI Chippest</h5>
+                            <p>Find out what's working and what's not Dig your data to find</p>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="column">
+                            <div class="about-icon">
+                                <i class="flaticon-artificial-intelligence"></i>
+                            </div>
+                            <h5>Cloud AI intergration</h5>
+                            <p>Find out what's working and what's not Dig your data to find</p>
+                        </div>
+                        <div class="column">
+                            <div class="about-icon">
+                                <i class="flaticon-robotic-arm"></i>
+                            </div>
+                            <h5>Robotic Arm</h5>
+                            <p>Find out what's working and what's not Dig your data to find</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6">
-                    <h2>introduction</h2>
-                    <p>paragraph</p>
-                    <div class="btn">button</div>
-                </div>
+                <div class="col-12 col-lg-5 introductionColumn2">
+                    <h2 class="introduction-h2">
+                        Power Your Creativity With Artificial Intelligence
+                    </h2>
+                    <p class="introduction-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Duis at dictum risus, non suscipit arcu.
+                        Quisque aliquam posuere tortor, sit amet convallis
+                        nunc scelerisque in.
+                    </p>
+                    <p class="introduction-p">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Labore eius molesti ae facere, natus
+                        reprehenderit eaque eum, autem ipsam. Magni, error.
+                        Tem pora odit laborum iure inventore possimus
+                        laboriosam qui nam. Fugit!
+                    </p>
+                    <div class="btn">Learn more</div>
             </div>
         </section>
 
